tests/sksl/errors/Ossfuzz44561.glsl
### Compilation failed:

error: 1: unknown identifier 'ix'
error: 1: invalid swizzle component 'c'
error: 1: expected ')' to complete expression, but found '{'
error: 1: expected ')' to complete function arguments, but found 'case'
error: 1: not a function
error: 1: expected ']' to complete array access expression, but found '0'
error: 1: expected ';', but found ':'
7 errors
